Write correct value for "Open in application" script execution setting

KIO actually uses "alwaysAsk", "execute", and "open" as possible values.

When reading the setting, map unknown values to "open" like KIO does.
That also provides compatibility with older dolphin versions.

BUG: 421294
FIXED-IN: 20.04.3